<resources>
    <string name="app_name">My Application</string>
    <string name="search">Search</string>
    <string name="title_activity_search">Search</string>

    <string name="cancel">Cancel</string>
    <string name="web">Web</string>
    <string name="type">Type</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete_item">Confirm delete item ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
